--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://claudiapalazon.github.io/mundo-cosmica/",
   "name": "mundo-cosmica",
   "version": "0.1.0",
   "private": true,
@@ -19,8 +20,10 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "rm -rf docs ; react-scripts build ; mv build docs",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -43,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.2.0",
     "node-sass": "^4.14.1"
   }
 }
